# db-diff-visualiser

./: LICENSE  README.md  VantageDB.code-workspace  dbdd.code-workspace
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  justfile  pyproject.toml
backend/src/: dependencies.py  main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 7827d34bdc1b_init.py
backend/src/core/: config.py  database.py
backend/src/domains/broker/: broker_routes.py  rabbit_schemas.py
backend/src/domains/broker/services/: file_service.py  rabbit_service.py
backend/src/domains/project/: api_schemas.py  models.py  project_routes.py  snapshot_routes.py
backend/src/domains/project/repositories/: project_repository.py
backend/src/domains/project/services/: project_service.py
backend/src/models/: models.py
backend/src/repositories/: file_repository.py  project_repository.py
backend/src/routes/: migration_routes.py  project_routes.py
backend/src/schemas/: api_schemas.py
backend/src/services/: file_service.py  project_service.py  rabbit_service.py
backend/src/utils/: enums.py
compose/: docker-compose.yml
frontend/: .dockerignore  Dockerfile  nginx.conf  nuxt.config.ts
frontend/app/: app.vue
frontend/app/composables/: useProjects.ts  useSchemaParser.ts  useSnapshotStats.ts  useSnapshots.ts
md/: TODO.md
snapshotter/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
snapshotter/src/: diff_checker.py  main.py  snapshot_orchestrator.py  snapshotter.py
snapshotter/src/alembic/: env.py
snapshotter/src/core/: config.py
snapshotter/src/snapshotter/: alembic_snapshotter.py  base_snapshotter.py
(+31 files in other folders)
